--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./output.css">
-    <title>Document</title>
+    <title>PLAG-E</title>
 </head>
 <body>
-    <h1 class="text-3xl font-bold text-center mt-10">¡Hola, mundo!</h1>
+    <h1 class="text-3xl">PLAG-E</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod beatae numquam voluptate eligendi temporibus, asperiores enim dolor voluptates ad aspernatur vitae quasi atque optio fugit iste accusamus! Voluptates, laboriosam.</p>
+
+    <section>
+        <a href="./auth.html">Go to the dashboard</a>
+    </section>
 </body>
 </html>
