--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<link rel="stylesheet" href="./output.css">
+	<title>PLAG-E - Home</title>
 </head>
 <body>
 
