Maquetacion Map, buy y home

--- a/public/buy.html
+++ b/public/buy.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" type="text/css" href="StylesGlobals.css">
+
     <title>PLAG-E - Buy</title>
 </head>
 <body>
-    
+    <div class="bg-green-200 border-0 ring-gray-600">Presentation
+        <img src="./images/OIG.jpg" class="logo rounded-full">
+    </div>
+    <br>
+        <div class= "grid grid-cols-3 gap-4">
+            <div>
+                <img src="./images/Amazon.png" class="image">
+            </div>
+            <div>
+                <img src="./images/Cyberpuerta.jpeg" class="image">
+            </div>
+            <div>
+                <img src="./images/Mercado libre.jpg" class="image">
+            </div>
+        </div>
 </body>
 </html>
