--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" type="text/css" href="StylesGlobals.css">
+    <link rel="stylesheet" type="text/css" href="output.css">
     <title>PLAG-E</title>
 </head>
 <body>
