--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="StylesGlobals.css">
-    <link rel="stylesheet" type="text/css" href="output.css">
-    <title>PLAG-E</title>
+	<link rel="stylesheet" type="text/css" href="output.css">
+    <title>Plag-e</title>
 </head>
 <body>
-    <h1 class="text-3xl">PLAG-E</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quod beatae numquam voluptate eligendi temporibus, asperiores enim dolor voluptates ad aspernatur vitae quasi atque optio fugit iste accusamus! Voluptates, laboriosam.</p>
+    <nav class="bg-black border-gray-200 dark:bg-gray-900">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+          <a href="https://flowbite.com/" class="flex items-center">
+              <img src="./images/OIG.jpg" class="h-8 mr-3 rounded-full" alt="Plag-e Logo" />
+              <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Plag-e</span>
+          </a>
+          <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+          </button>
+          <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-black md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-black ark:bg-gray-800">
+            </ul>
+          </div>
+        </div>
+      </nav>   
+<section class="cardP content-center w-full border border-gray-200 rounded-lg shadow">
+    <a href="#">
+        <img class=" mt-4 ml-36" src="./images/Sembrado.jpg" alt="" />
+    </a>
+    <div class="p-5">
+        <a href="#">
+            <h5 class="ml-32 mb-2 text-2xl font-bold tracking-tight text-white ">Noteworthy technology acquisitions 2021</h5>
+        </a>
+        <p class="ml-32  mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+        <a href="#" class="ml-32 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Login
+            <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+        </a>
+    </div>
+</section>
+<a href="#" class="mt-4 mb-4 flex flex-col items-center bg-white border border-gray-400 rounded-lg shadow md:flex-row w-full hover:bg-gray-100">
+    <img class="object-cover w-full ml-4 mt-4 mb-4 rounded-full h-96 md:h-auto md:w-48" src="./images/OIG.jpg" alt="">
+    <div class="flex flex-col justify-between p-4 leading-normal">
+        <h5 class="ml-8 mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
+        <p class="ml-8 mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+    </div>
+</a>
+<a href="#" class="mt-4 mb-4 flex flex-col items-center bg-white border border-gray-400 rounded-lg shadow md:flex-row w-full hover:bg-gray-100">
+    <div class="mr-76 flex flex-col justify-between p-4">
+        <h5 class="ml-28 mr-4 mb-2 text-2xl font-bold text-right tracking-tight text-gray-900">Noteworthy technology acquisitions 2021</h5>
+        <p class="ml-28 mr-4 mb-3 font-normal text-gray-700 text-right ">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+    </div>
+    <img class="mr-4 mb-4 mt-4 object-cover rounded-full h-96 md:h-auto md:w-48" src="./images/OIG.jpg" alt="">
+</a>
 
-    <section>
-        <a href="./auth.html">Go to the dashboard</a>
-    </section>
+
+<footer class="mt-4 bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 ">
+    <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">Plag-e™</a>. All Rights Reserved.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+            <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
+        </li>
+        <li>
+            <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+        </li>
+        <li>
+            <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline">Contact</a>
+        </li>
+    </ul>
+</footer>
+
+
+
+
 </body>
 </html>
