--- a/public/index.html
+++ b/public/index.html
@@ -54,43 +54,17 @@
       </div>
     </nav>
 
-    <section
-      class="cardP content-center w-full border border-gray-200 rounded-lg shadow"
-    >
-      <a href="#">
-        <img class="mt-4 ml-36" src="./images/Sembrado.jpg" alt="" />
-      </a>
-      <div class="p-5">
-        <a href="#">
-          <h5 class="ml-32 mb-2 text-2xl font-bold tracking-tight text-white">
-            Noteworthy technology acquisitions 2021
-          </h5>
-        </a>
-        <p class="ml-32 mb-3 font-normal text-white">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
-        </p>
-        <a
-          href="/auth"
-          class="ml-32 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-white rounded-lg hover:bg-green-600 focus:ring-4 focus:outline-none focus:ring-green-300"
-        >
-          Login
-          <svg
-            aria-hidden="true"
-            class="w-4 h-4 ml-2 -mr-1"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </a>
+    <section class="bg-[url('./images/panoramica.jpg')]">
+      <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+          <div class="mr-auto place-self-center lg:col-span-7">
+              <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">PLAG-E: Smart caring</h1>
+              <p class="max-w-2xl mb-6 bg-green-600  text-white lg:mb-8 md:text-lg lg:text-xl ">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
+              <a href="/auth" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center bg-green-500 hover:bg-green-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">
+                  Enter to PLAG-E
+              </a> 
+          </div>                
       </div>
-    </section>
+  </section>
 
     <article
       class="mt-4 mb-4 flex flex-col items-center bg-white border border-gray-400 rounded-lg shadow md:flex-row w-full "
