--- a/public/add.html
+++ b/public/add.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" type="text/css" href="StylesGlobals.css">
     <title>PLAG-E - Add</title>
 </head>
 <body>
-    <h1>Aqui pones el nuevo robot</h1>
+    <main class="py-14">
+        <div class="max-w-screen-xl mx-auto px-4 text-gray-600 md:px-8">
+            <div class="max-w-lg mx-auto space-y-3 sm:text-center">
+                <h3 class="text-green-600 font-semibold">
+                    PLAG-E
+                </h3>
+                <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+                    Add a new PLAG-E
+                </p>
+                <p>
+                    Insert your PLAG-E's code
+                </p>
+            </div>
+            <div class="mt-12 max-w-lg mx-auto">
+                <form
+                    
+                >
+                    
+                    <div>
+                        <label class="font-medium">
+                            Code
+                        </label>
+                        <input
+                            type="email"
+                            required
+                            class="w-full mt-2 px-3 py-2 text-gray-500 bg-transparent outline-none border focus:border-green-600 shadow-sm rounded-lg"
+                        />
+                    </div>
+                    <div>
+                        <label class="font-medium">
+                            Name
+                        </label>
+                        <div class="relative mt-2">
+                            <input
+                                type="text"
+                                required
+                                class="w-full pl-[0.6rem] pr-3 py-2 appearance-none bg-transparent mb-3 outline-none border focus:border-green-600 shadow-sm rounded-lg"
+                            />
+                        </div>
+                    </div>
+                    <button
+                        class="w-full px-4 py-2 text-white font-medium bg-green-600 hover:bg-green-500 active:bg-green-600 rounded-lg duration-150"
+                    >
+                        Submit
+                    </button>
+                </form>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
