--- a/public/add.html
+++ b/public/add.html
@@ -112,6 +112,7 @@ const addForm = document.getElementById("addForm");
             if (response.ok) {
                 const data = await response.json();
                 console.log(data.message);
+                window.location.href = "/home";
             } else {
                 const errorData = await response.json();
                 console.error(errorData.error);
