--- a/public/buy.html
+++ b/public/buy.html
@@ -11,34 +11,35 @@
 </head>
 <body>
     
-  <nav class="bg-black border-gray-200">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="https://flowbite.com/" class="flex items-center">
-          <img src="./images/OIG.jpg" class="h-8 mr-3" alt="Plag-e Logo" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Plag-e</span>
-      </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-default" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-      </button>
-      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0">
-          <li>
-            <a href="/home" class="block py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:p-0 text-white " aria-current="page">Home</a>
-          </li>
-          <li>
-            <a href="/buy" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:text-green-500 md:border-0 md:hover:text-green-500 md:p-0">Buy</a>
-          </li>
-          <li>
-            <a href="/tutorials" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Tutorials</a>
-          </li>
-          <li>
-            <a href="/map" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Map</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+	<nav class="bg-black border-gray-200">
+	  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+	    <a href="#" class="flex items-center">
+	        <img src="./images/OIG.jpg" class="h-8 mr-3" alt="Plag-e Logo" />
+	        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Plag-e</span>
+	    </a>
+	    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-default" aria-expanded="false">
+	      <span class="sr-only">Open main menu</span>
+	      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+	    </button>
+	    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+	      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0">
+	        <li>
+	          <a href="/home" class="block mt-3 py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0" aria-current="page">Home</a>
+	        </li>
+	        <li>
+	          <a href="/buy" class="block mt-3 py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:text-green-500 md:p-0 text-white " aria-current="page">Buy</a>
+	        </li>
+	        <li>
+	          <a href="/tutorials" class="block mt-3 py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Tutorials</a>
+	        </li>
+	        <li>
+	          <a href="/add" class="block px-5 py-3 text-base font-medium text-center bg-green-500 hover:bg-green-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Add PLAG-E</a>
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+
 
       <br>
     <a href="#" class=" flex flex-col items-center cardP border border-gray-200 rounded-lg shadow md:flex-row w-full ">
