--- a/public/tutorials.html
+++ b/public/tutorials.html
@@ -11,7 +11,7 @@
    
     <nav class="bg-black border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-          <a href="https://flowbite.com/" class="flex items-center">
+          <a href="#" class="flex items-center">
               <img src="./images/OIG.jpg" class="h-8 mr-3" alt="Plag-e Logo" />
               <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Plag-e</span>
           </a>
@@ -22,21 +22,22 @@
           <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0">
               <li>
-                <a href="/home" class="block py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:p-0 text-white " aria-current="page">Home</a>
+                <a href="/home" class="block mt-3 py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0" aria-current="page">Home</a>
               </li>
               <li>
-                <a href="/buy" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Buy</a>
+                <a href="/buy" class="block mt-3 py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Buy</a>
               </li>
               <li>
-                <a href="/tutorials" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:text-green-500 md:border-0 md:hover:text-green-500 md:p-0">Tutorials</a>
+                <a href="/tutorials" class="block mt-3 py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:text-green-500 md:p-0 text-white ">Tutorials</a>
               </li>
               <li>
-                <a href="/map" class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-500 md:p-0">Map</a>
+                <a href="/add" class="block px-5 py-3 text-base font-medium text-center bg-green-500 hover:bg-green-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Add PLAG-E</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+  
 
 <div class="ml-12 mb-4 mt-4 grid grid-cols-2 gap-4">
     <article>    
