Tutorials page updated

--- a/public/add.html
+++ b/public/add.html
@@ -55,6 +55,10 @@
                     >
                         Submit
                     </button>
+                    <br><br>
+                    <center>
+                    <a href="/home" class="text-red-500 underline">Cancel</a>
+                    </center>
                 </form>
             </div>
         </div>
