--- a/public/tutorials.html
+++ b/public/tutorials.html
@@ -33,6 +33,9 @@
               <li>
                 <a href="/add" class="block px-5 py-3 text-base font-medium text-center bg-green-500 hover:bg-green-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Add PLAG-E</a>
               </li>
+              <li>
+                <a href="/logout" class="block px-5 py-3 text-base font-medium text-center bg-red-500 hover:bg-red-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Log out</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -41,60 +44,60 @@
 
 <div class="ml-12 mb-4 mt-4 grid grid-cols-2 gap-4">
     <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
             <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/off.jpg" alt="">
             <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Getting started with PLAG-E</h5>
+                <p class="mb-3 font-normal text-white">Here you can learn the first steps of how to use PLAG-E in your crops!</p>
             </div>
         </a>
     </article>
 
     <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+            <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/route.jpg" alt="">
+            <div class="flex flex-col justify-between p-4 leading-normal">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Track my PLAG-E's position</h5>
+                <p class="mb-3 font-normal text-white">Where is my PLAG-E? In this tutorial you will learn how to see your PLAG-E's location.</p>
+            </div>
+        </a>
+    </article>
+
+    <article>    
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
             <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/batery.jpg" alt="">
             <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Charge PLAG-E</h5>
+                <p class="mb-3 font-normal text-white">Here you will learn all about your PLAG-E's battery.</p>
             </div>
         </a>
     </article>
 
     <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
-            <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/rute.jpg" alt="">
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+            <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/trash.jpg" alt="">
             <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-            </div>
-        </a>
-    </article>
-
-    <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
-            <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/solar.jpg" alt="">
-            <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Waste and weed management</h5>
+                <p class="mb-3 font-normal text-white">Learn about how PLAG-E manages the collected waste and weed.</p>
             </div>
         </a>
     </article>
     <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
             <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/init.jpg" alt="">
             <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Where buy PLAG-E?</h5>
+                <p class="mb-3 font-normal text-white">Where can I buy PLAG-E? All of buy and shipping info here.</p>
             </div>
         </a>
     </article>
 
     <article>    
-        <a href="#" class="bg-green-400 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
+        <a href="#" class="bg-green-400 hover:bg-green-600 flex flex-col items-center border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl">
             <img class="m-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/plant.jpg" alt="">
             <div class="flex flex-col justify-between p-4 leading-normal">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">PLAG-E beneficts</h5>
+                <p class="mb-3 font-normal text-white">Learn all about PLAG-E, the future of the waste and weed control caring.</p>
             </div>
         </a>
     </article>
