--- a/public/home.html
+++ b/public/home.html
@@ -34,6 +34,9 @@
 	        <li>
 	          <a href="/add" class="block px-5 py-3 text-base font-medium text-center bg-green-500 hover:bg-green-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Add PLAG-E</a>
 	        </li>
+          <li>
+            <a href="/logout" class="block px-5 py-3 text-base font-medium text-center bg-red-500 hover:bg-red-600  rounded-lg focus:ring-4 focus:ring-gray-100 text-white">Log out</a>
+          </li>
 	      </ul>
 	    </div>
 	  </div>
