--- a/public/buy.html
+++ b/public/buy.html
@@ -44,28 +44,19 @@
 	</nav>
 
 
-      <br>
-    <a href="#" class=" flex flex-col items-center cardP border border-gray-200 rounded-lg shadow md:flex-row w-full ">
-        <img class="mt-8 ml-4 mb-8 mr-4 object-cover w-full h-96 md:h-auto md:w-48 rounded-full" src="./images/OIG.jpg" alt="">
-        <div class="flex flex-col justify-between p-4 leading-normal">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Noteworthy technology acquisitions 2021</h5>
-            <p class="mb-3 font-normal text-white">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-        </div>
-    </a>
     
-    <br>
-        <div class= " ml-16 mt-4 grid grid-cols-3 gap-4">
-            <div class="">
-                <img src="./images/Amazon.png" class="image">
-                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium text-sm ">buy</button> 
+        <div class= " mt-40 grid grid-cols-3 gap-4 justify-items-center">
+            <div>
+                <img src="./images/az.png" class="image">
+                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-green-400 hover:bg-green-500 focus:ring-4  font-medium text-sm ">Buy PLAG-E</button> 
             </div>
             <div>
-                <img src="./images/Cyberpuerta.jpeg" class="image">
-                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium text-sm ">buy</button>
+                <img src="./images/cb.png" class="image">
+                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-green-400 hover:bg-green-500 focus:ring-4 focus:ring-green-300 font-medium text-sm ">Buy PLAG-E</button>
             </div>
             <div>
-                <img src="./images/Mercado libre.jpg" class="image">
-                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium text-sm ">buy</button>
+                <img src="./images/ml.jpg" class="image">
+                <button class="mt-4 py-2.5 buttonB rounded-full focus:outline-none text-white bg-green-400 hover:bg-green-500 focus:ring-4 focus:ring-green-300 font-medium text-sm ">Buy PLAG-E</button>
             </div>
         </div>
 </body>
