--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,10 @@
       />
       <div class="flex flex-col justify-between p-4 leading-normal">
         <h5 class="ml-8 mb-2 text-2xl font-bold tracking-tight text-gray-900">
-          Noteworthy technology acquisitions 2021
+          The smart caring solution for your crops
         </h5>
         <p class="ml-8 mb-3 font-normal text-gray-700">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          PLAG-E allows you to view the statistics of the collected garbage in a simple and easy-to-understand graph.
         </p>
       </div>
     </article>
@@ -91,11 +90,10 @@
         <h5
           class="ml-28 mr-4 mb-2 text-2xl font-bold text-right tracking-tight text-gray-900"
         >
-          Noteworthy technology acquisitions 2021
+          The future of the smart farming
         </h5>
         <p class="ml-28 mr-4 mb-3 font-normal text-gray-700 text-right">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Using Industry 4.0, PLAG-E is an intelligent ground drone designed for the elimination of weed pests and cleaning of trash in crops. 
         </p>
       </div>
       <img
